src/test/resources/typeSystemTestModels/valid/constructors/ConstructorMustNamedAsClass.java
package typeSystemTestModels.valid.constructors;

public class ConstructorMustNamedAsClass {

  public ConstructorMustNamedAsClass(){

  }
}
