src/test/resources/typeSystemTestModels/invalid/constructors/ConstructorMustNamedAsClass.java
package typeSystemTestModels.invalid.constructors;

public class ConstructorMustNamedAsClass {

  public A(){

  }
}